the big fix on item gaps for all

--- a/assets/less/item.less
+++ b/assets/less/item.less
@@ -13,7 +13,7 @@
   padding: @item-visual-gap 0 @item-visual-gap @item-visual-gap;
   border-right: none;
   margin-right: -1px; /*border on top of border*/
-  margin-bottom: -2px: /*border on top of border */
+  margin-bottom: -2px; /*border on top of border */
 }
 
 /**
